syntax = "proto3";
package osmosis.poolmanager.v1beta1;

import "gogoproto/gogo.proto";
import "osmosis/poolmanager/v1beta1/tx.proto";

option go_package = "github.com/osmosis-labs/osmosis/v17/x/poolmanager/types";

message DenomPairTakerFeeProposal {
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;

  string title = 1;
  string description = 2;

  repeated osmosis.poolmanager.v1beta1.DenomPairTakerFee denom_pair_taker_fee =
      3 [ (gogoproto.nullable) = false ];
}
